# rust_crud_user

./: Cargo.toml
src/: main.rs
src/classes/: user.rs
src/user_input/: main_user_input.rs  mod_user_input.rs  user_user_input.rs
