[package]
name = "crud_users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.10.1"
axum = "0.6.18"
axum-macros = "0.3.8"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
serde_json = {version = "1.0"}